--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Bruno Oliveira - Portifólio</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+
+    <title>Lazernet | Internet Ultrarrápida</title>
 </head>
+
 <body>
-    <h1>Hello, World!</h1>
+
+  <header class="topbar">
+
+    <a href="#"><img id="logotipo" src="/portifolio/logotipo.png" alt="Lazernet Internet Fibra Óptica"></a>
+
+    <nav class="menu">
+      <ul>
+        <li><a href="">Sobre nós</a></li>
+        <li><a href="">Planos</a></li>
+        <li><a href="">Cobertura</a></li>
+        <li><a href="">Teste de Velocidade</a></li>
+        <li><a href="">Sou cliente</a></li>
+        <li><a href="">Contato</a></li>
+      </ul>
+    </nav>
+
+  </header>
+  <main id="page1">
+
+  </main>
+  <main id="page2">
+
+  </main>
+  <main id="page3">
+
+  </main>
+
 </body>
+
 </html>
